# BizPortalClients

./: README.md
django_bizportal_client/: README.md  __init__.py  admin.py  apps.py  backends.py  client.py  context_processors.py  middleware.py  models.py  pyproject.toml  settings.py  tests.py  urls.py  views.py
django_bizportal_client/management/commands/: createsuperuser.py
django_bizportal_client/migrations/: 0001_initial.py
flask_bizportal_client/: README.md
laravel_bizportal_client/: README.md
