[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-bizportal-client"
version = "0.3.0"
authors = [
  { name="リマ アンデルソン", email="a_lima@ts-taisei.co.jp" },
]
description = "BizPortal OIDC IdP用の最小限のDjangoクライアント統合パッケージ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "Authlib>=1.3,<2.0",
    "requests>=2.31",
]

[tool.setuptools]
include-package-data = true
packages = [
    "django_bizportal_client",
    "django_bizportal_client.management",
    "django_bizportal_client.management.commands",
    "django_bizportal_client.migrations",
]

[tool.setuptools.package-dir]
django_bizportal_client = "."
